--- a/app/views/spree/admin/orders/_print_buttons.html.erb
+++ b/app/views/spree/admin/orders/_print_buttons.html.erb
@@ -1,4 +1,4 @@
-<% if @order and @order.completed_at? %>
+<% if @order %>
   <% buttons = Spree::PrintInvoice::Config[:print_buttons]
      buttons = buttons.split(",").collect{|b| b.strip } %>
   <%  buttons.each do |button| %>
